[gd_scene load_steps=5 format=2]

[ext_resource path="res://creatures/player/abilities/blue_action.gd" type="Script" id=1]
[ext_resource path="res://Audio/SFX/sfx_sounds_interaction11.wav" type="AudioStream" id=2]
[ext_resource path="res://Audio/SFX/sfx_sounds_interaction1.wav" type="AudioStream" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 40.0

[node name="Area2D" type="Area2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AudioChange" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -20.0

[node name="AudioConnect" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -15.0
pitch_scale = 1.1

[connection signal="area_entered" from="." to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_Area2D_area_exited"]
